# AI-agent

./: README.md  find UE installed.py  second brain.md  test.py
OmniParser/: .env-example  .gitignore  pyproject.toml
OpenManus/: README.md  h.md  pyproject.toml
OpenManus/app/: config.py
OpenManus/app/daytona/: sandbox.py  tool_base.py
agent-tars/: .env-example  .gitignore  h.md
browser-use/: .env-example  .gitignore  h.md  pyproject.toml  s
browser-use/run/: my_agent.py
open-interpreter/: .gitignore  README.md  h.md
patchright/: .env-example  h.md  main.py  package-lock.json  prompt.md  pyproject.toml  script.py
windowsuse/: .env-example  .gitignore  h.md  main.py  pyproject.toml
