[project]
name = "openmanus"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles~=24.1.0",
    "baidusearch~=1.0.3",
    "beautifulsoup4~=4.13.3",
    "boto3~=1.37.18",
    "browser-use~=0.1.40",
    "browsergym~=0.13.3",
    "colorama~=0.4.6",
    "crawl4ai~=0.6.3",
    "datasets~=3.4.1",
    "docker~=7.1.0",
    "duckduckgo-search~=7.5.3",
    "fastapi~=0.115.11",
    "googlesearch-python~=1.3.0",
    "gymnasium~=1.1.1",
    "html2text~=2024.2.26",
    "httpx>=0.27.0",
    "huggingface-hub~=0.29.2",
    "loguru~=0.7.3",
    "mcp~=1.5.0",
    "numpy",
    "openai~=1.66.3",
    "pillow~=10.4.0",
    "playwright~=1.51.0",
    "pydantic~=2.10.6",
    "pydantic-core~=2.27.2",
    "pytest~=8.3.5",
    "pytest-asyncio~=0.25.3",
    "pyyaml~=6.0.2",
    "requests~=2.32.3",
    "setuptools~=75.8.0",
    "tenacity~=9.0.0",
    "tiktoken~=0.9.0",
    "tomli>=2.0.0",
    "unidiff~=0.7.5",
    "uvicorn~=0.34.0",
]
